--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Portafolio - Fernando Almaraz</title>
+    <link rel="stylesheet" href="estilos-globales.css">
     <link rel="stylesheet" href="stylesportafolio.css">
 </head>
 
@@ -50,7 +51,7 @@
                 <label for="email">Tu Email:</label>
                 <input type="email" id="email" required>
                 <button type="submit">Enviar</button>
-            </form>index
+            </form>
             <p id="mensaje-feedback"></p>
         </section>
 
