feat: ejecucio 1 generador de paleta de colores

--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
                 <a href="ejercicios.html">Ver ejercicios</a>
             </article>
         </section>
+        <section id="paleta">
+            <h2>Generador de Paleta de Colores</h2>
+            <p>Haz clic en el botón para generar una nueva paleta de 5 colores. 
+            Puedes hacer clic en un color para copiar su código hexadecimal.</p>
+
+            <button id="btnPaleta" class="boton">Generar Nueva Paleta</button>
+
+            <div id="contenedorColores" class="paleta"></div>
+        </section>
+
+
+
         <section id="contacto">
             <h2>Contacto</h2>
             <form id="formulario-contacto">
@@ -54,7 +66,6 @@
             </form>
             <p id="mensaje-feedback"></p>
         </section>
-
     </main>
 
     <footer>
